--- a/Results/TableB3.tex
+++ b/Results/TableB3.tex
@@ -1,44 +1,50 @@
 {
 \def\sym#1{\ifmmode^{#1}\else\(^{#1}\)\fi}
-\begin{tabular}{l*{7}{c}}
+\begin{tabular}{l*{6}{c}}
 \hline\hline
-            &\multicolumn{1}{c}{(1)}&\multicolumn{1}{c}{(2)}&\multicolumn{1}{c}{(3)}&\multicolumn{1}{c}{(4)}&\multicolumn{1}{c}{(5)}&\multicolumn{1}{c}{(6)}&\multicolumn{1}{c}{(7)}\\
-            &\multicolumn{1}{c}{Area1}&\multicolumn{1}{c}{Area2}&\multicolumn{1}{c}{Area3}&\multicolumn{1}{c}{Area4}&\multicolumn{1}{c}{Area5}&\multicolumn{1}{c}{std}&\multicolumn{1}{c}{avg\_efw}\\
+            &\multicolumn{1}{c}{(1)}&\multicolumn{1}{c}{(2)}&\multicolumn{1}{c}{(3)}&\multicolumn{1}{c}{(4)}&\multicolumn{1}{c}{(5)}&\multicolumn{1}{c}{(6)}\\
+            &\multicolumn{1}{c}{avg\_efw}&\multicolumn{1}{c}{efw\_indep}&\multicolumn{1}{c}{avg\_efw}&\multicolumn{1}{c}{efw\_indep}&\multicolumn{1}{c}{avg\_efw}&\multicolumn{1}{c}{avg\_efw}\\
 \hline
-centuries   &       0.167\sym{*}  &       0.284\sym{**} &       0.105         &       0.198         &       0.229\sym{**} &     -0.0729\sym{**} &       0.196\sym{**} \\
-            &    (0.0998)         &     (0.109)         &     (0.110)         &     (0.122)         &    (0.0892)         &    (0.0337)         &    (0.0790)         \\
+efw\_colonizer&       0.668\sym{***}&       1.406\sym{***}&                     &                     &       0.714\sym{***}&       0.905\sym{***}\\
+            &     (0.191)         &     (0.409)         &                     &                     &     (0.176)         &     (0.312)         \\
 [1em]
-1.colonizer &           0         &           0         &           0         &           0         &           0         &           0         &           0         \\
-            &         (.)         &         (.)         &         (.)         &         (.)         &         (.)         &         (.)         &         (.)         \\
+lpd1500s    &      -0.236\sym{***}&      -0.115         &      -0.195\sym{***}&      -0.108         &                     &                     \\
+            &    (0.0597)         &     (0.117)         &    (0.0650)         &     (0.126)         &                     &                     \\
 [1em]
-2.colonizer &      -0.434\sym{***}&       2.610\sym{***}&       1.896\sym{***}&       1.268\sym{***}&       2.203\sym{***}&      -0.559\sym{***}&       1.511\sym{***}\\
-            &     (0.136)         &     (0.246)         &     (0.242)         &     (0.253)         &     (0.200)         &    (0.0692)         &     (0.165)         \\
+centuries   &                     &                     &       0.213\sym{***}&       0.256\sym{**} &       0.179\sym{**} &       0.932         \\
+            &                     &                     &    (0.0799)         &     (0.119)         &    (0.0679)         &     (0.873)         \\
 [1em]
-3.colonizer &      -0.575\sym{***}&       1.431\sym{***}&       1.202\sym{***}&       0.588\sym{***}&       1.368\sym{***}&      -0.519\sym{***}&       0.805\sym{***}\\
-            &     (0.209)         &     (0.161)         &     (0.180)         &     (0.184)         &     (0.174)         &    (0.0836)         &     (0.133)         \\
+2.colonizer &                     &                     &           0         &           0         &                     &                     \\
+            &                     &                     &         (.)         &         (.)         &                     &                     \\
 [1em]
-4.colonizer &      -0.907\sym{***}&       1.999\sym{***}&       1.784\sym{***}&       0.163         &       1.965\sym{***}&      -0.533\sym{***}&       0.997\sym{***}\\
-            &     (0.315)         &     (0.600)         &     (0.262)         &     (0.342)         &     (0.285)         &     (0.155)         &     (0.265)         \\
+3.colonizer &                     &                     &      -0.590\sym{***}&      -1.159\sym{***}&                     &                     \\
+            &                     &                     &     (0.216)         &     (0.252)         &                     &                     \\
 [1em]
-5.colonizer &      -2.004\sym{***}&       1.149\sym{***}&       0.981\sym{***}&      -2.930\sym{***}&       1.098\sym{***}&      -0.112\sym{***}&      -0.382\sym{***}\\
-            &    (0.0389)         &    (0.0424)         &    (0.0429)         &    (0.0476)         &    (0.0348)         &    (0.0131)         &    (0.0308)         \\
+4.colonizer &                     &                     &     -0.0680         &      -0.697         &                     &                     \\
+            &                     &                     &     (0.368)         &     (0.447)         &                     &                     \\
 [1em]
-6.colonizer &      -0.865         &       1.569\sym{***}&       2.092\sym{***}&       0.826         &       1.172\sym{***}&      -0.268         &       0.967\sym{***}\\
-            &     (1.058)         &     (0.352)         &     (0.278)         &     (0.557)         &     (0.327)         &     (0.162)         &     (0.292)         \\
+5.colonizer &                     &                     &      -1.289\sym{***}&                     &                     &                     \\
+            &                     &                     &     (0.246)         &                     &                     &                     \\
 [1em]
-7.colonizer &      -1.333\sym{***}&       1.259\sym{**} &       1.175\sym{**} &       0.650         &       0.380         &      -0.359\sym{*}  &       0.437         \\
-            &     (0.434)         &     (0.518)         &     (0.550)         &     (0.533)         &     (0.342)         &     (0.192)         &     (0.305)         \\
+6.colonizer &                     &                     &      -0.518         &      -1.097\sym{**} &                     &                     \\
+            &                     &                     &     (0.465)         &     (0.486)         &                     &                     \\
 [1em]
-8.colonizer &      0.0172         &       1.837\sym{***}&       2.264\sym{***}&       1.654\sym{***}&       1.316\sym{***}&      -0.294\sym{**} &       1.424\sym{***}\\
-            &     (0.331)         &     (0.331)         &     (0.457)         &     (0.388)         &     (0.282)         &     (0.118)         &     (0.292)         \\
+7.colonizer &                     &                     &      -1.145\sym{***}&                     &                     &                     \\
+            &                     &                     &     (0.271)         &                     &                     &                     \\
 [1em]
-\_cons      &       7.092\sym{***}&       2.046\sym{***}&       5.757\sym{***}&       5.164\sym{***}&       4.534\sym{***}&       2.047\sym{***}&       4.916\sym{***}\\
-            &    (0.0748)         &    (0.0815)         &    (0.0824)         &    (0.0916)         &    (0.0669)         &    (0.0252)         &    (0.0593)         \\
+8.colonizer &                     &                     &     -0.0593         &                     &                     &                     \\
+            &                     &                     &     (0.295)         &                     &                     &                     \\
+[1em]
+c.efw\_colonizer#c.centuries&                     &                     &                     &                     &                     &      -0.102         \\
+            &                     &                     &                     &                     &                     &     (0.117)         \\
+[1em]
+\_cons      &       1.391         &      -5.367\sym{*}  &       6.335\sym{***}&       5.339\sym{***}&       0.742         &      -0.666         \\
+            &     (1.438)         &     (3.050)         &     (0.240)         &     (0.321)         &     (1.290)         &     (2.300)         \\
 \hline
-\(N\)       &         107         &         107         &         107         &         107         &         107         &         107         &         107         \\
-\(R^{2}\)   &       0.174         &       0.240         &       0.136         &       0.258         &       0.248         &       0.080         &       0.264         \\
+\(N\)       &          66         &          43         &          86         &          43         &          87         &          87         \\
+\(R^{2}\)   &       0.349         &       0.336         &       0.377         &       0.529         &       0.209         &       0.216         \\
 \hline\hline
-\multicolumn{8}{l}{\footnotesize Standard errors in parentheses}\\
-\multicolumn{8}{l}{\footnotesize \sym{*} \(p<0.10\), \sym{**} \(p<0.05\), \sym{***} \(p<0.01\)}\\
+\multicolumn{7}{l}{\footnotesize Standard errors in parentheses}\\
+\multicolumn{7}{l}{\footnotesize \sym{*} \(p<0.10\), \sym{**} \(p<0.05\), \sym{***} \(p<0.01\)}\\
 \end{tabular}
 }
