--- a/Results/Table5.tex
+++ b/Results/Table5.tex
@@ -1,47 +1,47 @@
 {
 \def\sym#1{\ifmmode^{#1}\else\(^{#1}\)\fi}
-\begin{tabular}{l*{9}{c}}
+\begin{tabular}{l*{8}{c}}
 \hline\hline
-            &\multicolumn{1}{c}{(1)}&\multicolumn{1}{c}{(2)}&\multicolumn{1}{c}{(3)}&\multicolumn{1}{c}{(4)}&\multicolumn{1}{c}{(5)}&\multicolumn{1}{c}{(6)}&\multicolumn{1}{c}{(7)}&\multicolumn{1}{c}{(8)}&\multicolumn{1}{c}{(9)}\\
-            &\multicolumn{1}{c}{avg\_efw}&\multicolumn{1}{c}{avg\_efw}&\multicolumn{1}{c}{avg\_efw}&\multicolumn{1}{c}{avg\_efw}&\multicolumn{1}{c}{avg\_efw}&\multicolumn{1}{c}{avg\_efw}&\multicolumn{1}{c}{avg\_efw}&\multicolumn{1}{c}{avg\_efw}&\multicolumn{1}{c}{avg\_efw}\\
+            &\multicolumn{1}{c}{(1)}&\multicolumn{1}{c}{(2)}&\multicolumn{1}{c}{(3)}&\multicolumn{1}{c}{(4)}&\multicolumn{1}{c}{(5)}&\multicolumn{1}{c}{(6)}&\multicolumn{1}{c}{(7)}&\multicolumn{1}{c}{(8)}\\
+            &\multicolumn{1}{c}{efw\_indep}&\multicolumn{1}{c}{efw\_indep}&\multicolumn{1}{c}{efw\_indep}&\multicolumn{1}{c}{efw\_indep}&\multicolumn{1}{c}{efw\_indep}&\multicolumn{1}{c}{efw\_indep}&\multicolumn{1}{c}{efw\_indep}&\multicolumn{1}{c}{efw\_indep}\\
 \hline
-efw\_colonizer&       0.983\sym{***}&       0.758\sym{*}  &       0.224         &       0.916\sym{***}&       0.730\sym{**} &       0.983\sym{***}&       0.951\sym{**} &       0.878\sym{**} &       0.971\sym{***}\\
-            &     (0.312)         &     (0.392)         &     (0.537)         &     (0.340)         &     (0.344)         &     (0.312)         &     (0.396)         &     (0.382)         &     (0.307)         \\
+efw\_colonizer&       1.106\sym{***}&       0.521         &       0.426         &       0.872\sym{**} &       0.483\sym{*}  &       1.088\sym{***}&       0.777\sym{*}  &       1.089\sym{***}\\
+            &     (0.373)         &     (0.393)         &     (0.402)         &     (0.384)         &     (0.282)         &     (0.355)         &     (0.393)         &     (0.366)         \\
 [1em]
-america     &                     &                     &                     &                     &       0.574\sym{***}&                     &                     &                     &                     \\
-            &                     &                     &                     &                     &     (0.194)         &                     &                     &                     &                     \\
+america     &                     &                     &                     &                     &       0.319         &                     &                     &                     \\
+            &                     &                     &                     &                     &     (0.252)         &                     &                     &                     \\
 [1em]
-africa      &                     &                     &                     &                     &     0.00451         &                     &                     &                     &                     \\
-            &                     &                     &                     &                     &     (0.227)         &                     &                     &                     &                     \\
+africa      &                     &                     &                     &                     &      -1.197\sym{***}&                     &                     &                     \\
+            &                     &                     &                     &                     &     (0.169)         &                     &                     &                     \\
 [1em]
-asia        &                     &                     &                     &                     &       0.629\sym{**} &                     &                     &                     &                     \\
-            &                     &                     &                     &                     &     (0.286)         &                     &                     &                     &                     \\
+asia        &                     &                     &                     &                     &     -0.0967         &                     &                     &                     \\
+            &                     &                     &                     &                     &     (0.275)         &                     &                     &                     \\
 [1em]
-lat\_abst    &                     &                     &                     &                     &                     &                     &      -0.221         &                     &                     \\
-            &                     &                     &                     &                     &                     &                     &     (1.368)         &                     &                     \\
+lat\_abst    &                     &                     &                     &                     &                     &       0.652         &                     &                     \\
+            &                     &                     &                     &                     &                     &     (1.272)         &                     &                     \\
 [1em]
-landlock    &                     &                     &                     &                     &                     &                     &       0.437\sym{*}  &                     &                     \\
-            &                     &                     &                     &                     &                     &                     &     (0.258)         &                     &                     \\
+landlock    &                     &                     &                     &                     &                     &     -0.0901         &                     &                     \\
+            &                     &                     &                     &                     &                     &     (0.248)         &                     &                     \\
 [1em]
-island      &                     &                     &                     &                     &                     &                     &       0.905\sym{***}&                     &                     \\
-            &                     &                     &                     &                     &                     &                     &     (0.289)         &                     &                     \\
+island      &                     &                     &                     &                     &                     &       0.905\sym{**} &                     &                     \\
+            &                     &                     &                     &                     &                     &     (0.370)         &                     &                     \\
 [1em]
-first       &                     &                     &                     &                     &                     &                     &                     &   -0.000670         &                     \\
-            &                     &                     &                     &                     &                     &                     &                     &  (0.000828)         &                     \\
+first       &                     &                     &                     &                     &                     &                     &    -0.00213\sym{*}  &                     \\
+            &                     &                     &                     &                     &                     &                     &   (0.00117)         &                     \\
 [1em]
-year\_independence&                     &                     &                     &                     &                     &                     &                     &     0.00162         &                     \\
-            &                     &                     &                     &                     &                     &                     &                     &    (0.0165)         &                     \\
+year\_independence&                     &                     &                     &                     &                     &                     &     0.00357         &                     \\
+            &                     &                     &                     &                     &                     &                     &    (0.0163)         &                     \\
 [1em]
-multiple    &                     &                     &                     &                     &                     &                     &                     &                     &       0.219         \\
-            &                     &                     &                     &                     &                     &                     &                     &                     &     (0.210)         \\
+multiple    &                     &                     &                     &                     &                     &                     &                     &       0.302         \\
+            &                     &                     &                     &                     &                     &                     &                     &     (0.298)         \\
 [1em]
-\_cons      &      -1.074         &       0.541         &       5.053         &      -0.608         &       0.578         &      -1.074         &      -1.208         &      -2.248         &      -1.039         \\
-            &     (2.341)         &     (2.881)         &     (4.135)         &     (2.527)         &     (2.709)         &     (2.341)         &     (2.989)         &     (31.97)         &     (2.291)         \\
+\_cons      &      -3.113         &       1.073         &       2.713         &      -1.469         &       2.258         &      -3.357         &      -3.759         &      -3.064         \\
+            &     (2.816)         &     (2.913)         &     (3.072)         &     (2.871)         &     (2.215)         &     (2.667)         &     (33.59)         &     (2.767)         \\
 \hline
-\(N\)       &          54         &          37         &          22         &          48         &          54         &          54         &          45         &          54         &          54         \\
-\(R^{2}\)   &       0.197         &       0.120         &       0.010         &       0.167         &       0.294         &       0.197         &       0.444         &       0.204         &       0.208         \\
+\(N\)       &          54         &          37         &          22         &          48         &          54         &          45         &          54         &          54         \\
+\(R^{2}\)   &       0.203         &       0.068         &       0.035         &       0.145         &       0.517         &       0.465         &       0.258         &       0.221         \\
 \hline\hline
-\multicolumn{10}{l}{\footnotesize Standard errors in parentheses}\\
-\multicolumn{10}{l}{\footnotesize \sym{*} \(p<0.10\), \sym{**} \(p<0.05\), \sym{***} \(p<0.01\)}\\
+\multicolumn{9}{l}{\footnotesize Standard errors in parentheses}\\
+\multicolumn{9}{l}{\footnotesize \sym{*} \(p<0.10\), \sym{**} \(p<0.05\), \sym{***} \(p<0.01\)}\\
 \end{tabular}
 }
